@@ -24,8 +24,8 @@
 	options = dep_methods
 	value_attr = 'id'
 	text_attr = 'method'
-	default_values = [method_id]
-	name = 'method_id'
+	default_values = [method]
+	name = 'method'
 } ?>
 </span>
 </div>
